# Shooting_2D

./: .clang-format  .gitignore  CMakeLists.txt  README.md
class_diagram/: UISystem.pu
src/: Actor.cpp  Actor.h  AnimSpriteComponent.cpp  AnimSpriteComponent.h  Asteroid.cpp  Asteroid.h  AudioSystem.cpp  AudioSystem.h  BGSpriteComponent.cpp  BGSpriteComponent.h  CircleCollider.cpp  CircleCollider.h  Collision.cpp  Collision.h  Color.h  Component.cpp  Component.h  CopyrightScreen.cpp  CopyrightScreen.h  EnemyShip.cpp  EnemyShip.h  EnemyShipGenerator.cpp  EnemyShipGenerator.h  Font.cpp  Font.h  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  InputSystem.cpp  InputSystem.h  Laser.cpp  Laser.h  PauseMenu.cpp  PauseMenu.h  PhysWorld.cpp  PhysWorld.h  PlayerInputMove.cpp  PlayerInputMove.h  PlayerShip.cpp  (+34 more)
src/Assets/: Master.bank  Master.strings.bank  licence.txt
src/Shaders/: Simple.frag  Simple.vert  Sprite.frag  Sprite.vert
